# keyleds

./: .lgtm.yml  CHANGELOG.rst  CMakeLists.txt  CONVENTIONS.rst  Doxyfile  README  README.rst  keyleds.spec  logitech.rules
keyledsctl/: CMakeLists.txt  keyledsctl.1
keyledsctl/include/: keyledsctl.h
keyledsctl/src/: dev_enum.c  dev_enum_hard.c  dev_enum_udev.c  keyledsctl.c  keyledsctl_gamemode.c  keyledsctl_get_leds.c  keyledsctl_gkeys.c  keyledsctl_info.c  keyledsctl_list.c  keyledsctl_set_leds.c  utils.c
keyledsd/: CMakeLists.txt  config.h.in  keyledsd.1  keyledsd.conf  keyledsd.conf.sample  keyledsd.desktop  org.etherdream.keyledsd.metainfo.xml
keyledsd/common/: CMakeLists.txt
keyledsd/common/include/: config.h.in
keyledsd/common/include/keyledsd/: KeyDatabase.h  RenderTarget.h  accelerated.h  colors.h  utils.h
keyledsd/common/src/: KeyDatabase.cxx  RenderTarget.cxx  accelerated.c  accelerated_avx2.c  accelerated_mmx.c  accelerated_plain.c  accelerated_sse2.c  colors.cxx  utils.cxx
keyledsd/common/tests/: RenderTarget.cxx  colors.cxx  utils.cxx
keyledsd/core/: CMakeLists.txt
keyledsd/core/include/: config.h.in  logging.h
keyledsd/core/include/keyledsd/: Configuration.h  Device.h  EffectManager.h  LayoutDescription.h  RenderLoop.h
keyledsd/core/include/tools/: AnimationLoop.h  DynamicLibrary.h  Paths.h  XWindow.h  YAMLParser.h
keyledsd/core/src/: logging.cxx
keyledsd/core/src/keyledsd/: Configuration.cxx  Device.cxx  EffectManager.cxx  LayoutDescription.cxx  RenderLoop.cxx
keyledsd/core/src/tools/: AnimationLoop.cxx  DynamicLibrary.cxx  Paths.cxx  XWindow.cxx  YAMLParser.cxx
keyledsd/effects/: heatmap.lua  idle-dim.lua  reactive-hlines.lua  stars.lua  toggle.lua  train.lua  whack-a-mole.lua
keyledsd/include/: config.h.in  logging.h
keyledsd/include/dbus/: DeviceManagerAdaptor.h  ServiceAdaptor.h
keyledsd/include/keyledsd/: Configuration.h  Context.h  ContextWatcher.h  Device.h  DeviceManager.h  DeviceManagerAdaptor.h  DisplayManager.h  KeyDatabase.h  Layout.h  LayoutDescription.h  PluginManager.h  RenderLoop.h  RenderTarget.h  Service.h  ServiceAdaptor.h  colors.h  common.h  logging.h  plugin.h
keyledsd/include/keyledsd/dbus/: DeviceManagerAdaptor.h  ServiceAdaptor.h
keyledsd/include/keyledsd/device/: Device.h  DeviceManager.h  KeyDatabase.h  LayoutDescription.h  Logitech.h  RenderLoop.h  RenderTarget.h
keyledsd/include/keyledsd/effect/: EffectManager.h  EffectService.h  PluginHelper.h  interfaces.h  module.h
keyledsd/include/keyledsd/plugin/: interfaces.h  (+1 more)
keyledsd/include/tools/: AnimationLoop.h  DeviceWatcher.h  DynamicLibrary.h  FileWatcher.h  Paths.h  SessionWatcher.h  XContextWatcher.h  XInputWatcher.h  XWindow.h  YAMLParser.h  accelerated.h
keyledsd/layouts/: README  c32b00000000_0001.xml  c32b00000000_0001.yaml  c32b00000000_0002.xml  c32b00000000_0002.yaml  c32b00000000_0003.xml  c32b00000000_0003.yaml  c32b00000000_0004.xml  c32b00000000_0004.yaml  c32b00000000_0005.xml  c32b00000000_0005.yaml  c32b00000000_0007.xml  c32b00000000_0007.yaml  c32b00000000_0008.xml  c32b00000000_0008.yaml  c32b00000000_000a.xml  c32b00000000_000a.yaml  c32b00000000_000b.xml  c32b00000000_000b.yaml  c33000000000_0001.xml  c33000000000_0001.yaml  c33000000000_0002.xml  c33000000000_0002.yaml  c33000000000_0003.xml  c33000000000_0003.yaml  c33000000000_0004.xml  c33000000000_0004.yaml  c33000000000_0005.xml  c33000000000_0005.yaml  c33000000000_0007.xml  c33000000000_0007.yaml  c33000000000_0008.xml  c33000000000_0008.yaml  c33000000000_0009.xml  c33000000000_0009.yaml  c33000000000_000a.xml  c33000000000_000a.yaml  c33000000000_000b.xml  c33000000000_000b.yaml  c33000000000_000d.xml  (+140 more)
keyledsd/plugins/: CMakeLists.txt
keyledsd/plugins/src/: PluginHelper.cxx  breathe.cxx  feedback.cxx  fill.cxx  lua.cxx  stars.cxx  wave.cxx
keyledsd/service/: CMakeLists.txt
keyledsd/service/include/: config.h.in
keyledsd/service/src/: DeviceManager.cxx  DisplayManager.cxx  Service.cxx  main.cxx
keyledsd/src/: KeyDatabase.cxx  RenderTarget.cxx  colors.cxx  logging.cxx  main.cxx
keyledsd/src/dbus/: DeviceManagerAdaptor.cxx  ServiceAdaptor.cxx
keyledsd/src/device/: Device.cxx  LayoutDescription.cxx  Logitech.cxx
keyledsd/src/keyledsd/: AnimationLoop.cxx  Configuration.cxx  Context.cxx  ContextWatcher.cxx  Device.cxx  DeviceManager.cxx  DeviceManagerAdaptor.cxx  DisplayManager.cxx  KeyDatabase.cxx  Layout.cxx  LayoutDescription.cxx  PluginManager.cxx  RenderLoop.cxx  Service.cxx  ServiceAdaptor.cxx  colors.cxx  common.cxx
keyledsd/src/plugins/: breathe.cxx  feedback.cxx  fill.cxx  lua.cxx  stars.cxx  wave.cxx
keyledsd/src/service/: Configuration.cxx  DeviceManager.cxx  DeviceManager_util.cxx  DisplayManager.cxx  EffectManager.cxx  EffectService.cxx  RenderLoop.cxx  Service.cxx  StaticModuleRegistry.cxx
keyledsd/src/tools/: AnimationLoop.cxx  DeviceWatcher.cxx  DynamicLibrary.cxx  Event.cxx  FileWatcher.cxx  Paths.cxx  SessionWatcher.cxx  XContextWatcher.cxx  XInputWatcher.cxx  XWindow.cxx  YAMLParser.cxx  accelerated.c  accelerated_avx2.c  accelerated_mmx.c  accelerated_plain.c  accelerated_sse2.c  utils.cxx
keyledsd/tests/: KeyDatabase.cxx  RenderTarget.cxx  RenderTarget_bench.cxx
keyledsd/tests/tools/: utils.cxx
libkeyleds/: CMakeLists.txt
libkeyleds/include/: config.h.in  keyleds.h
libkeyleds/include/keyleds/: command.h  device.h  error.h  features.h  logging.h
libkeyleds/src/: command.c  device.c  error.c  feature_core.c  feature_gamemode.c  feature_gkeys.c  feature_layout.c  feature_leds.c  feature_reportrate.c  feature_version.c  hid_parser.c  keys.c  logging.c  strings.c
libkeyleds2/: CMakeLists.txt
libkeyleds2/include/: config.h.in
libkeyleds2/include/libkeyleds/: Device.h  EventCode.h  Feature.h  HIDEndpoint.h  HIDParser.h  RingBuffer.h  utils.h
libkeyleds2/src/: HIDEndpoint.cxx  HIDParser.cxx  utils.cxx
libkeyleds2/src/logitech/: Device.cxx
libkeyleds2/tests/: AsyncTest.cxx  AsyncTest.h  HIDEndpoint.cxx  HIDParser.cxx  HIDParser_fuzz.cxx  RingBuffer.cxx
python/: CMakeLists.txt  keyleds.pxd  keyleds.pyx
(+156 files in other folders)
